updates on frontend

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -30,7 +30,7 @@
 .nav-link {
 	color: white !important;
 }
-.navbar-nav .nav-link.active {
+.navbar-nav .nav-link.active,.test {
 	background-color: var(--bs-warning);
 	border-top-right-radius: 20px;
 	border-bottom-left-radius: 20px;
