--- a/client/src/css/register.css
+++ b/client/src/css/register.css
@@ -1,4 +1,3 @@
-
 .label {
 	display: flex;
 	flex-direction: row;
@@ -64,7 +63,8 @@
 }
 .booster {
 	width: 100%;
-	height: 100%;
+	height: 25vh;
+	object-fit: cover;
 }
 
 .option {
@@ -118,17 +118,10 @@
 	background-color: var(--bs-warning);
 	color: #fff;
 	font-size: 1.2rem;
+	line-height: 2.5rem;
 	font-weight: 600;
 	opacity: 0.9;
-	margin-top: 50px;
-	width: 320px;
-	height: 60px;
-	border: 2px;
-	border-radius: 8px;
 	outline: 0;
-}
-.form-login {
-	margin-top: 110px;
 }
 .social {
 	color: #f6f2f2;
@@ -163,4 +156,11 @@
 	margin-bottom: 20px;
 	box-sizing: border-box;
 	margin-left: 30px;
+}
+
+/* .login-page { */
+	/* min-height: 92vh; */
+/* } */
+.login-page .row {
+	--bs-gutter-x: 0 !important;
 }
