--- a/client/src/css/register.css
+++ b/client/src/css/register.css
@@ -26,7 +26,7 @@
 .check1 {
 	color: var(--bs-primary);
 	font-weight: normal;
-	font-size: 1.2rem;
+	/* font-size: 1.2rem; */
 }
 .check {
 	margin-left: 5px;
@@ -61,12 +61,21 @@
 .btn2 :disabled {
 	opacity: 0.5;
 }
-.booster {
+.booster-login {
 	width: 100%;
 	height: 25vh;
 	object-fit: cover;
 }
-
+.booster-register {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+}
+@media screen and (max-width: 600px) {
+	.booster-register {
+		display: none;
+	}
+}
 .option {
 	margin-left: 80px;
 	color: var(--bs-warning);
@@ -132,7 +141,6 @@
 }
 .text {
 	width: 100%;
-	height: 150px;
 	padding: 12px 20px;
 	box-sizing: border-box;
 	border: 2px solid #ccc;
@@ -143,7 +151,6 @@
 }
 .text2 {
 	width: 100%;
-	height: 150px;
 	padding: 8px 22px;
 	box-sizing: border-box;
 	border: 2px solid #ccc;
