--- a/client/src/App.css
+++ b/client/src/App.css
@@ -190,13 +190,22 @@ input[type="checkbox"] {
 	width: 50%;
 	min-width: 300px;
 }
-.bg-cutom-gradient{
-	background: rgb(8,40,77);
-background: linear-gradient(144deg, rgba(8,40,77,1) 0%, rgba(41,79,122,1) 65%, rgba(91,137,191,1) 100%);
+.bg-cutom-gradient {
+	background: rgb(8, 40, 77);
+	background: linear-gradient(
+		144deg,
+		rgba(8, 40, 77, 1) 0%,
+		rgba(41, 79, 122, 1) 65%,
+		rgba(91, 137, 191, 1) 100%
+	);
 }
-.pointer{
+.pointer {
 	cursor: pointer;
 }
-.dropdown-menu{
-		--bs-dropdown-min-width: 2rem!important;
+.dropdown-menu {
+	--bs-dropdown-min-width: 2rem !important;
+}
+
+.min-h-50 {
+	min-height: 50vh;
 }
